# coin-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
detectors/: anchors.py  augmentations.py  dataset.py  detector.py  detnet.py  dummy.py  encode.py  inference.py  iou.py  loss.py  matching.py  mc.py  model.py  retinanet.py  shapes.py
scripts/: shapes.py
tests/: conftest.py  test_anchors.py  test_augmentations.py  test_dataset.py  test_dummy.py  test_encode.py  test_inference.py  test_iou.py  test_loss_select.py  test_matching.py  test_mc.py  test_model.py  test_nms.py  test_retinanet.py  test_shapes.py
